--- a/app-name/src/App.css
+++ b/app-name/src/App.css
@@ -46,7 +46,7 @@ body{
   margin: 0 auto;
 }
 
-label {
+label{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -87,6 +87,15 @@ button{
   font-size: 0.7rem;
   color: red;
 }
-
+select{
+  width: 100%;
+  margin: 5px 0 0;
+  display: block;
+  border: 2px solid teal;
+  padding: 10px;
+  letter-spacing: 0.5px;
+  background-color:lightgoldenrodyellow;  
+  font-size: 1rem;
+}
 
 
